--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 application.theme.color=black
+
+spring.datasource.hikari.maximum-pool-size=30
