--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -15,6 +15,6 @@ spring.h2.console.path=/h2-console
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-application.theme.color=black
+application.theme.color=white
 
-spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.maximum-pool-size=15
